# tmux-cast

./: README.md  demo.py  interactive_demo.py  pyproject.toml
tmux_cast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tmuxcast/: __init__.py  cast.py  main.py  stream.py  terminal.py
